deploy/k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hyperchess-gateway
  labels:
    app: hyperchess-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hyperchess-gateway
  template:
    metadata:
      labels:
        app: hyperchess-gateway
    spec:
      containers:
        - name: hyperchess-gateway
          image: registry.semanticallyinvalid.net/michaelmcculloch/hyperchess/gateway:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3123
              name: http
          readinessProbe:
            tcpSocket:
              port: 3123
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 3123
            initialDelaySeconds: 5
            periodSeconds: 10
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: hyperchess-server
spec:
  selector:
    app: hyperchess-gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3123
  type: ClusterIP
